finish main structure

--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
+    <meta name="description" content="a wx app based on vux">
+    <meta name="author" content="liucaizhong">
+    <!-- <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico"> -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>vux-research</title>
   </head>
   <body>
-    <div id="app-box"></div>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
+    <%=htmlWebpackPlugin.files.webpackManifest%>
   </body>
 </html>
