--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <meta name="description" content="a wx app based on vux">
     <meta name="author" content="liucaizhong">
-    <!-- <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico"> -->
+    <!-- <link rel="shortcut icon" type="image/x-icon" href="./static/favicon.ico"> -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <title>vux-research</title>
+    <link rel="stylesheet" href="./static/font-awesome/css/font-awesome.min.css">
+    <title>微投研</title>
   </head>
   <body>
     <div id="app"></div>
