--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="description" content="a wx app based on vux">
     <meta name="author" content="liucaizhong">
     <!-- <link rel="shortcut icon" type="image/x-icon" href="./static/favicon.ico"> -->
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Expires" content="0" />
     <link rel="stylesheet" href="./static/font-awesome/css/font-awesome.min.css">
+    <script type="text/javascript" src="http://rescdn.qqmail.com/node/ww/wwopenmng/js/sso/wwLogin-1.0.0.js"></script>
     <title>微投研</title>
   </head>
   <body>
